<resources>
    <string name="app_name">Memories</string>


    <!-- Textes des onglets -->
    <string name="first_tab_name">Fil d\'actualité</string>
    <string name="second_tab_name">Thèmes</string>

    <!-- Texte des FAB -->
    <string name="add_theme">Ajouter un thème</string>
    <string name="add_souvenir">Ajouter un souvenir</string>
    <string name="srch_hint">Effectuer une recherche</string>

    <!-- Texte d'ajout d'un souvenir -->
    <string name="add_title"><font size="30">Ajouter un nom</font></string>
    <string name="add_description">Ajouter une description</string>
    <string name="add_date">Ajouter une date</string>
    <string name="add_place">Ajouter un lieu</string>
    <string name="add_pic">Ajouter une photo</string>
    <string name="take_pic">Prendre une photo</string>
    <string name="add_the_souvenir">Ajouter le souvenir</string>

    <!-- Texte d'ajout d'un lieu -->
    <string name="pick_location">Choisir le lieu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="confirm">Confirmer cette position</string>
    <string name="loading">Recherche de votre position en cours</string>

    <!-- Texte d'un souvenir -->
    <string name="title_memory">Titre du souvenir</string>
    <string name="search" > Recherche un souvenir</string>

    <!-- Texte d'édition d'un souvenir -->
    <string name="edit_memory">Editer le souvenir</string>

</resources>